--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,27 @@
-# Unity generated folders dentro de Project_Jam2025J
-Project_Jam2025J/[Ll]ibrary/
-Project_Jam2025J/[Tt]emp/
-Project_Jam2025J/Obj/
-Project_Jam2025J/[Bb]uild/
-Project_Jam2025J/[Bb]uilds/
+# Ignore Unity generated files
+/Burbuja/Library/
+/Burbuja/Temp/
+/Burbuja/Target/
+/Burbuja/Obj/
+/Burbuja/Build/
 
-# Archivos específicos del usuario dentro de Project_Jam2025J
-Project_Jam2025J/[Dd]ebug/
-Project_Jam2025J/[Dd]ebugFiles/
-Project_Jam2025J/.idea/
-Project_Jam2025J/.vscode/
+# Ignore user-specific files
+/Burbuja/.idea/
+/Burbuja/.vscode/
 
-# Archivos generados por el sistema operativo
-Project_Jam2025J/.DS_Store
-Project_Jam2025J/Thumbs.db
+# Ignore system-specific files
+.DS_Store
+Thumbs.db
 
-# Archivos específicos del usuario (Windows)
-Project_Jam2025J/*.user
-Project_Jam2025J/*.userprefs
+# Ignore Unity-specific files
+/Burbuja/Assets/AssetStoreTools*
+/Burbuja/Packages/
 
-# Archivos específicos del usuario (Mac)
-Project_Jam2025J/.idea/
+# Ignore build folders if you generate builds
+/Burbuja/Build/
+/Burbuja/Builds/
 
-# Archivos de JetBrains Rider dentro de Project_Jam2025J
-Project_Jam2025J/.idea/
-
-# Archivos de Package Manager dentro de Project_Jam2025J
-Project_Jam2025J/Packages/manifest.json
-Project_Jam2025J/Packages/packages-lock.json
-
-# Archivos de logs dentro de Project_Jam2025J
-Project_Jam2025J/*.log
-
-# Ignorar archivos y carpetas generados por Unity
-
-# Archivos de configuración de Unity
-[Dd]ebug/
-[Dd]ebugLog/
-[Dd]iagnostics/
-
-# Archivos de solución y proyecto
-.idea/
-.vscode/
-.vs/
-*.csproj
-*.sln
-*.userprefs
-
-# Archivos de librerías y cachés
-[Ll]ibrary/
-[Ll]ibrary/ScriptAssemblies/
-[Ll]ibrary/ScriptableObjects/
-[Ll]ibrary/ShaderCache/
-[Ll]ibrary/AssetImportState/
-[Ll]ibrary/Metadata/
-[Ll]ibrary/PlayerDataCache/
-
-# Archivos de Build
-[Tt]emp/
-[Tt]emp/Build/
-[Tt]emp/BuildPlayer/
-
-# Ignorar carpetas de configuración de los proyectos Unity (Burbuja y MovementTest)
-Burbuja/Library/
-Burbuja/Temp/
-Burbuja/Build/
-Burbuja/obj/
-
-MovementTest/Library/
-MovementTest/Temp/
-MovementTest/Build/
-MovementTest/obj/
-
-# Otros archivos no necesarios de Unity
-*.apk
-*.aab
-*.swp
-*.suo
-*.user
+# Ignore other temporary files or files that shouldn't be tracked
+/Burbuja/*.user
+/Burbuja/*.suo
+/Burbuja/*.userprefs
